--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -1,15 +1,14 @@
-echo 'version: 2
+version: 2
+
+build:
+  os: ubuntu-22.04
+  tools:
+    python: "3.8"
 
 sphinx:
   configuration: source/conf.py
 
 python:
-  version: 3.8
+  version: "3.8"
   install:
     - requirements: requirements.txt
-
-build:
-  os: ubuntu-22.04
-  tools:
-    python: "3.8"' > .readthedocs.yaml
-    
