--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -9,6 +9,6 @@ sphinx:
   configuration: source/conf.py
 
 python:
-  version: "3.10"
   install:
     - requirements: requirements.txt
+  system_packages: true
